--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,4 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this template
-*/
-/* 
-    Created on : 10 dic 2024, 17:30:10
-    Author     : vecin
-*/
+
 
 /* General */
 body {
@@ -74,6 +67,7 @@ section {
     margin-bottom: 10px;
 }
 
+
 /* Galería */
 .gallery-images {
     display: flex;
@@ -88,11 +82,30 @@ section {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+/* Estilo para los enlaces sociales */
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.social-icon img {
+    width: 70px;
+    height: 70px;
+    transition: transform 0.3s ease;
+}
+
+.social-icon img:hover {
+    transform: scale(1.2); /* Efecto de zoom al pasar el mouse */
+}
 /* Mapa */
 .map iframe {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+
 
 /* Pie de página */
 footer {
