--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,19 @@ section {
 }
 
 
+/* Promociones */
+.gallery-images {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.gallery-images img {
+    max-width: 200px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 /* Galería */
 .gallery-images {
     display: flex;
