--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,7 @@ header {
     .nav-list {
         display: none;
         flex-direction: column;
-        background:#fff ;
+        background:white ;
         position: absolute;
         top: 60px;
         right: 20px;
